Refactored CSS class names Added padding to aside on lesson page to show correctly on mobile

--- a/app/components/curriculum_video_component/curriculum_video_component.scss
+++ b/app/components/curriculum_video_component/curriculum_video_component.scss
@@ -26,7 +26,7 @@
       flex: 2;
     }
 
-    &--details {
+    &-details {
       flex: 1;
       padding-left: $component-padding;
 
@@ -56,11 +56,10 @@
   padding-top: $component-padding;
 
   &-content {
-    &--details {
+    &-details {
       display: flex;
       flex-wrap: wrap;
       padding-top: $component-padding;
-
 
       &__name {
         flex: 1 1 50%;
